--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -1,6 +1,8 @@
-html, body {
+body {
     width: 100%;
     height: 100%;
+    background: url('resources/wallpaper.jpg') center;
+    background-size: cover;
 }
 h1 {
     text-align:center;
@@ -9,4 +11,8 @@ h1 {
 h1.red {
     color: red;
 }
+.sideelement {
+    width: 30%;
+    height: 100%;
 
+}
