--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -1,18 +1,32 @@
 body {
-    width: 100%;
-    height: 100%;
     background: url('resources/wallpaper.jpg') center;
     background-size: cover;
 }
 h1 {
     text-align:center;
+    color: orange;
+}
+h2 {
+    text-align:center;
+    color: orange;
+}
+h1.green {
+    text-align:center;
     color: palegreen;
 }
-h1.red {
-    color: red;
+h2.green {
+    text-align:center;
+    color: palegreen;
 }
-.sideelement {
+div.sideelement {
     width: 30%;
     height: 100%;
+
+}
+div.bbox {
+    background-color: black;
+    opacity: 0.7;
+    width: 70%;
+    height: 30%;
 
 }
