--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -30,3 +30,15 @@ div.bbox {
     height: 30%;
 
 }
+
+td.SHIP {
+    background-color: darkblue;
+}
+
+td.HIT {
+    background-color: red;
+}
+
+td.MISS {
+    background-color: aqua;
+}
