--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -21,12 +21,24 @@ h2.green {
 div.sideelement {
     width: 30%;
     height: 100%;
-
+}
+div.fieldstyle {
+    width: 70%;
+    height: 100%;
+}
+div.sidetop {
+    height: 30%;
+}
+div.sidebottom {
+    height: 30%;
+}
+div.sidemiddle {
+    height: 40%;
 }
 div.bbox {
     background-color: black;
     opacity: 0.7;
-    width: 70%;
+    width: 50%;
     height: 30%;
 
 }
@@ -35,10 +47,14 @@ div.forText {
 }
 div.forBtn {
     height: 30%;
-    opacity: 1.0;
 }
+input.register {
+    width: 30%;
+}
+
 table {
     border-collapse: collapse;
+    display: inline-block;
 }
 
 td {
