--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -14,6 +14,12 @@ h1.green {
     text-align:center;
     color: palegreen;
 }
+
+h1.black {
+    text-align:center;
+    color: black;
+}
+
 h2.green {
     text-align:center;
     color: palegreen;
@@ -42,6 +48,11 @@ div.bbox {
     height: 30%;
 
 }
+.roundSmall {
+    width: 16px;
+    height: 16px;
+
+}
 div.forText {
     height: 70%;
 }
@@ -56,10 +67,14 @@ table {
     border-collapse: collapse;
     display: inline-block;
 }
+table.inline {
+    border-collapse: collapse;
+    display: inline-block;
+}
 
 td {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     text-align: center;
     border: 1px solid black;
 }
